<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="Courses"
        android:id="@+id/coursesMenu"
        android:icon="@drawable/ic_action_name"/>
    <item android:title="Forum"
        android:id="@+id/forumsMenu"
        android:icon="@drawable/ic_forum_24"/>
    <item android:title="Profile"
        android:id="@+id/profileMenu"
        android:icon="@drawable/ic_profile_menu"/>
</menu>